# oxidescript

./: .gitignore  Cargo.toml  justfile  readme.md  rome.json  syntax.md  test.calc  test.js  test.os
examples/fibonacci/: main.js  main.os
examples/loop/: main.js  main.os
examples/modules/: main.js
examples/modules/module/: index.js  submodule.js
javascript-compiler/: Cargo.toml
javascript-compiler/src/: compile.rs  js.rs  lib.rs
javascript-compiler/src/compile/: block.rs  conditional.rs  function.rs  ident.rs  index.rs  infix.rs  literal.rs  loop.rs  member_access.rs  modules.rs  unary.rs
oxidescript/: Cargo.toml
oxidescript-cli/: Cargo.toml
oxidescript-cli/environments/: browser.d.os  browser.toml
oxidescript-cli/src/: environment.rs  main.rs
oxidescript/src/: error.rs  lib.rs  main.rs  scope.rs  symbols.rs
oxidescript/src/checker/: declaration.rs  expression.rs  mod.rs  module_resolver.rs  modules.rs  program.rs  symbols.rs
oxidescript/src/compiler/: mod.rs
oxidescript/src/lexer/: mod.rs  token.rs  tokens.rs  utils.rs
oxidescript/src/loader/: mod.rs
oxidescript/src/parser/: ast.rs  atoms.rs  declaration.rs  expression.rs  (+6 more)
rustytypescript/: Cargo.toml
rustytypescript/src/: main.rs
src/: main.rs  parser.rs  rustytypescript.pest
tree-sitter-oxidescript/: Cargo.toml  binding.gyp  grammar.js  package.json  pnpm-lock.yaml
tree-sitter-oxidescript/src/: grammar.json  node-types.json  parser.c
tree-sitter-rustytypescript/: Cargo.toml  binding.gyp  grammar.js  package.json
tree-sitter-rustytypescript/src/: grammar.json  parser.c
(+8 files in other folders)
