[package]
name = "oxidescript-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oscli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
oxidescript = { path = "../oxidescript" }
oxidescript_javascript_compiler = { path = "../javascript-compiler" }
tempfile = "3"
